...
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/activity_lifePoints_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/appwidget_text"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold"
...
